--- a/Playlister_Final/client/src/App.css
+++ b/Playlister_Final/client/src/App.css
@@ -39,22 +39,6 @@ body {
   left: 0%;
 }
 
-#top5-banner {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  width: 100%;
-  height: 10%;
-  float: left;
-  background-image: linear-gradient(to bottom, #b8b808, #636723);
-  color: white;
-  font-size: 48pt;
-  border-color: black;
-  border-width: 2px;
-  border-style: solid;
-  border-radius: 10px;
-}
-
 #splash-screen {
   background-image: linear-gradient(to bottom, #129880, #2ac38d, #1dcf4f);
   color: white;
@@ -62,7 +46,6 @@ body {
   border-color: black;
   border-width: 0px;
   border-style: solid;
-  border-radius: 10px;
   padding-top: 5%;
   padding-bottom: 5%;
   height:70%;
@@ -75,44 +58,6 @@ body {
   float: right;
 }
 
-.top5-button,
-.top5-button-disabled {
-  font-size: 36pt;
-  border-width: 0px;
-  float: left;
-  color: black;
-  cursor: pointer;
-  opacity: 100%;
-}
-
-.top5-button:hover {
-  cursor: pointer;
-  color: black;
-}
-
-.top5-button-disabled {
-  opacity: 0.25;
-  cursor: not-allowed;
-}
-
-#top5-list-selector {
-  position: absolute;
-  left: 0%;
-  top: 10%;
-  width: 100%;
-  height: 80%;
-  background-color: var(--swatch-primary);
-}
-
-#top5-workspace {
-  position: absolute;
-  left: 0%;
-  top: 10%;
-  width: 100%;
-  height: 80%;
-  background-color: var(--swatch-accent);
-}
-
 #homescreen {
   position: absolute;
   left: 0%;
@@ -122,14 +67,17 @@ body {
   background-color: var(--swatch-primary);
 }
 
-#homescreen-sections {
+#playlister-statusbar {
   position: absolute;
-  display: flex;
-  flex-direction: row;
-  margin-top: 4.5%;
-  margin-bottom: 5%;
-  height: 87.5%;
+  left: 0%;
+  top: 90%;
   width: 100%;
+  height: 10%;
+  display: flex;
+  background-color: #bfbfbf;
+  align-items: center;
+  justify-content: center;
+  font-size: 36pt;
 }
 
 #homescreen-heading {
@@ -148,51 +96,37 @@ body {
   justify-content: left;
 }
 
-#playlister-statusbar {
-  position: sticky;
-  left: 0%;
-  top: 90%;
-  width: 100%;
-  height: 10%;
-  background-color: #bfbfbf;
-  color: white;
-  align-items: center;
-  justify-content: center;
-  font-size: 36pt;
-}
-
-#list-selector-heading {
-  position: relative;
-  left: 0%;
-  top: 0%;
-  width: 100%;
-  height: 10%;
-  text-align: center;
-  font-size: 24pt;
-  font-weight: bold;
+#homescreen-sections {
+  position: absolute;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  margin-top: 4.5%;
+  margin-bottom: 5%;
+  height: 87.5%;
+  width: 100%;
 }
 
 #add-list-button {
   float: left;
 }
 
-#list-selector-list {
-  left: 0%;
-  top: 10%;
-  width: 100%;
-  height: 90%;
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
+#playlist-selector-list {
+  width: 60%;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#player-comment-tab {
+  width: 40%;
+  height: 100%;
 }
 
 .list-card,
 .selected-list-card,
 .unselected-list-card {
   font-size: 18pt;
+  color: white;
   margin: 10px;
   padding: 20px;
   border-radius: 25px;
@@ -206,20 +140,9 @@ body {
   pointer-events: none;
 }
 
-#playlist-selector-list {
-  width: 60%;
-  height: 100%;
-  overflow-y: auto;
-}
-
-#player-comment-tab {
-  width: 40%;
-  height: 100%;
-}
-
 .unselected-list-card:hover {
   cursor: pointer;
-  background-color: var(--swatch-contrast);
+  background-color: #FFAE42;
   color: white;
 }
 
@@ -229,21 +152,12 @@ body {
 }
 
 .unselected-list-card {
-  background-color: var(--swatch-complement);
+  background-color: #528AAE;
 }
 
 .list-card-button {
   float: right;
-  font-size: 24pt;
-}
-
-#workspace-home,
-#workspace-edit {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  width: 100%;
-  height: 100%;
+  font-size: 18pt;
 }
 
 #edit-numbering {
@@ -264,39 +178,8 @@ body {
   background-color: var(--swatch-primary);
 }
 
-.item-number,
-.top5-item,
-.top5-item-dragged-to {
-  display: flex;
-  align-items: center;
-  font-size: 48pt;
-  height: 20%;
-}
-
-.item-number {
-  justify-content: center;
-  width: 100%;
-  border: 1px 0px 1px 1px;
-  border-color: black;
-  background-color: linen;
-  color: black;
-}
-
 input {
   font-size: 20pt;
-}
-
-.top5-item,
-.top5-item-dragged-to {
-  text-align: left;
-  width: 95%;
-  padding-left: 5%;
-}
-.top5-item {
-  background-color: var(--swatch-complement);
-}
-.top5-item-dragged-to {
-  background-color: var(--swatch-accent);
 }
 
 .disabled {
@@ -327,12 +210,6 @@ input {
   transition: all 0.35s ease-in;
   font-family: var(--font-primary);
 }
-
-span {
-  font-weight: bolder;
-  font-style: italic;
-}
-
 
 .modal.is-visible {
   visibility: visible;
@@ -367,6 +244,11 @@ span {
   border-bottom: dotted;
 }
 
+.modal-header,
+.modal-close {
+  font-size: 1.5rem;
+}
+
 .modal-root {
   position: relative;
   max-width: 1200vw;
@@ -386,15 +268,6 @@ span {
   padding: 1rem;
 }
 
-.modal-header,
-.modal-close {
-  font-size: 1.5rem;
-}
-
-.modal p + p {
-  margin-top: 1rem;
-}
-
 .modal-north {
   font-size:32pt;
   font-weight: bold;
@@ -408,6 +281,16 @@ span {
   grid-template-rows: 33% 33% 33%;
   gap: 10px 20px;
   font-size: 32pt;
+}
+
+.modal-control {
+  cursor: pointer;
+  width: 20%;
+}
+
+span {
+  font-weight: bold;
+  font-style: italic;
 }
 
 .modal-south {
@@ -433,7 +316,7 @@ span {
 }
 
 .modal-button {
-  margin:5px;
+  font-size: 20pt;
 }
 
 #title-prompt {
@@ -474,9 +357,12 @@ span {
   justify-content: center;
 }
 
-.modal-control {
-  cursor: pointer;
-  width: 20%;
+.modal-button {
+  margin:5px;
+}
+
+.modal p + p {
+  margin-top: 1rem;
 }
 
 .dialog-header {
